<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="@dimen/padding_linear_layout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/board_local"
        android:textAlignment="center"
        android:textSize="@dimen/size_board"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_constraint_layout"
        android:layout_weight="1">

        <Button
            android:id="@+id/local_button_to_subtract_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_color"
            android:gravity="center"
            android:text="@string/text_button_subtract"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_button_points"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/local_board"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_board"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/default_score_board" />

        <Button
            android:id="@+id/local_button_to_add_one_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_color"
            android:gravity="center"
            android:text="@string/text_button_one_point"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_button_points"
            app:layout_constraintBottom_toTopOf="@+id/local_button_to_add_two_points"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/local_button_to_add_two_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_color"
            android:gravity="center"
            android:text="@string/text_button_two_points"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_button_points"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_constraint_layout"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/button_restart_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_color"
            android:padding="@dimen/padding_image_button"
            android:src="@drawable/restart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pelota"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_to_score_activity"
            android:layout_width="@dimen/size_width_navigate_activity"
            android:layout_height="@dimen/size_height_navigate_activity"
            android:layout_marginEnd="@dimen/margin_navigate_activity_button"
            android:backgroundTint="@color/button_color"
            android:gravity="center"
            android:text=">"
            android:textSize="@dimen/text_size_navigate_activity_button"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.523" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_constraint_layout"
        android:layout_weight="1">

        <Button
            android:id="@+id/visitor_button_to_subtract_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_color"
            android:gravity="center"
            android:text="@string/text_button_subtract"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_button_points"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/visitor_board"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_board"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/default_score_board" />

        <Button
            android:id="@+id/visitor_button_to_add_one_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_color"
            android:gravity="center"
            android:text="@string/text_button_one_point"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_button_points"
            app:layout_constraintBottom_toTopOf="@+id/visitor_button_to_add_two_points"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/visitor_button_to_add_two_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_color"
            android:gravity="center"
            android:text="@string/text_button_two_points"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_button_points"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/board_visitor"
        android:textAlignment="center"
        android:textSize="@dimen/size_board"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</LinearLayout>